[gd_scene load_steps=13 format=3 uid="uid://dnnfmc4o2qab6"]

[ext_resource type="Theme" uid="uid://difjd64jhu5hr" path="res://Assets/Themes/Main.tres" id="1_vt204"]
[ext_resource type="FontFile" uid="uid://c6bxrr21jks66" path="res://Assets/fonts/dogicapixel.ttf" id="2_78m7w"]
[ext_resource type="Script" uid="uid://dtrn336y024rp" path="res://Scripts/UI/hold_button.gd" id="3_jdg3t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_78m7w"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vt204"]
bg_color = Color(0.334019, 0.585568, 0.944248, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
anti_aliasing = false

[sub_resource type="Gradient" id="Gradient_i2k26"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5fxgd"]
gradient = SubResource("Gradient_i2k26")
fill_to = Vector2(0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ea7rc"]
texture = SubResource("GradientTexture2D_5fxgd")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i2k26"]
bg_color = Color(0.223529, 0.501961, 0.890196, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
anti_aliasing = false

[sub_resource type="InputEventKey" id="InputEventKey_i2k26"]
device = -1
keycode = 69
unicode = 101

[sub_resource type="Shortcut" id="Shortcut_5fxgd"]
events = [SubResource("InputEventKey_i2k26")]

[sub_resource type="CircleShape2D" id="CircleShape2D_vt204"]
radius = 27.0185

[node name="Hold button" type="Button"]
z_index = 20
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
theme = ExtResource("1_vt204")
theme_override_fonts/font = ExtResource("2_78m7w")
theme_override_font_sizes/font_size = 4
theme_override_styles/focus = SubResource("StyleBoxFlat_78m7w")
theme_override_styles/hover = SubResource("StyleBoxFlat_vt204")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ea7rc")
theme_override_styles/normal = SubResource("StyleBoxFlat_i2k26")
action_mode = 0
shortcut = SubResource("Shortcut_5fxgd")
text = "E"
script = ExtResource("3_jdg3t")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(5, 5)
shape = SubResource("CircleShape2D_vt204")
debug_color = Color(0.31, 0.62, 0, 0.0392157)

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -23.0
offset_top = -10.0
offset_right = 33.0
offset_bottom = -2.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 1.0
offset_top = 2.0
offset_right = 55.0
offset_bottom = 6.0
text = "ts text pmo"
horizontal_alignment = 1

[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
